<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFFF2"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="316dp"
            android:layout_height="302dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_transparent"
            android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/New"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="@string/nouveau_match"
        android:textColor="#FAFFF2"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        />

        <Button
            android:id="@+id/Old"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/voir_matchs"
            android:textColor="#FAFFF2"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            />

    </LinearLayout>

</LinearLayout>