<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="#FAFFF2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:orientation="vertical"
                android:background="#763487">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suivi_match"
                    android:textColor="#FFFFFF"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:textSize="40sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/localisation"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@android:drawable/ic_menu_mylocation"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/location"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@android:drawable/ic_menu_view"
            android:textSize="25sp"
            android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="60dp"
                        android:layout_weight="1"
                        android:text="Nom"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="33dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:text="Set1" />

                    <TextView
                        android:layout_width="33dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:text="Set2" />

                    <TextView
                        android:layout_width="33dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:text="Set3" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:text="Gagnant" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Joueur1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/Set1j1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/Set2j1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/Set3j1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <RadioButton android:id="@+id/radioj1"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Joueur2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/Set1j2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/Set2j2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/Set3j2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="number" />

                    <RadioButton android:id="@+id/radioj2"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/statistiques"
                    android:drawableRight="@android:drawable/ic_menu_recent_history"
                    android:layout_marginLeft="10dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/Duree"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/duree"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/saisie_duree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="number" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/Ace"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nombre_ace"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/saisie_ace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/fautes"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nombre_fautes"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/saisie_fautes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableTop="@android:drawable/ic_menu_camera"
                android:layout_weight="2"
                android:background="@drawable/button2"
                android:text="@string/photo"
                android:textSize="15sp"
                android:textColor="#FFFFFF" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Back"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="2"
                    android:background="@drawable/buttonback"
                    android:drawableTop="@android:drawable/ic_menu_revert"
                    android:text="@string/back_menu"

                    android:textSize="18sp"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/Save"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="2"
                    android:drawableTop="@android:drawable/ic_menu_save"
                    android:background="@drawable/buttonsave"
                    android:text="@string/save_match"
                    android:onClick="addM"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>